@@ -243,6 +243,10 @@ def parse_args(args=None):
             action="store_false",
             dest="accelerated_2d_canvas",
             help="Don't use hardware-accelerated 2D Canvas calls"),
+        optparse.make_option("--enable-hardware-gpu",
+            action="store_true",
+            default=False,
+            help="Run graphics tests on real GPU hardware vs software"),
     ]
 
     # Missing Mac-specific old-run-webkit-tests options:
