@@ -1,3 +1,13 @@
+2011-01-14  Vincent Scheib  <scheib@chromium.org>
+
+        Reviewed by David Levin.
+
+        Add support to DumpRenderTree to use the GPU rather than software renderer
+        https://bugs.webkit.org/show_bug.cgi?id=52333
+
+        * DEPS: Moved forward to take required support from webkit_support.h
+        * WebKit.gyp: DumpRenderTree depends on Angle on windows
+
 2011-01-14  Finnur Thorarinsson  <finnur.webkit@gmail.com>
 
         Reviewed by Ojan Vafai.
