@@ -1,3 +1,15 @@
+2011-01-14  Vincent Scheib  <scheib@chromium.org>
+
+        Reviewed by David Levin.
+
+        Add support to DumpRenderTree to use the GPU rather than software renderer
+        https://bugs.webkit.org/show_bug.cgi?id=52333
+
+        * DumpRenderTree/chromium/DumpRenderTree.cpp:
+        (main):
+        * Scripts/webkitpy/layout_tests/port/chromium.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
+
 2011-01-14  Tony Chang  <tony@chromium.org>
 
         Reviewed by Kent Tamura.
